# Stu_Minecraft

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/client/: Cargo.toml
src/client/assets/shaders/: fog.wgsl  lens_flare.wgsl  water.wgsl
src/client/src/: chat.rs  input.rs  main.rs  net.rs  rendering.rs  world.rs
src/client/src/player/: camera.rs  controller.rs  inventory.rs  mod.rs
src/client/src/rendering/: fog_pass.rs  lens_flare.rs  mod.rs  water_material.rs
src/input/: mod.rs
src/player/: camera.rs  controller.rs  inventory.rs  mod.rs
src/rendering/: mod.rs
src/server/: Cargo.toml
src/server/src/: main.rs
src/shared/: Cargo.toml
src/shared/src/: block.rs  chunk.rs  generator.rs  lib.rs  protocol.rs
src/world/: chunk.rs  generator.rs  mod.rs  registry.rs
