[workspace]
members = ["src/client", "src/server", "src/shared"]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.18.1", features = ["bevy_picking", "dynamic_linking"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
noise = "0.9.0"

[profile.dev.packages."*"]
opt-level = 3
